[package]
name = "chikin-nft-canvas"
version = "0.0.1"
description = "Chikin NFT Canvas (Solana on-chain program)"
authors = ["Many chikins <chikindeveloper@protonmail.com>"]
license = "Apache-2.0"
homepage = "https://chikin.run/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
solana-program = "1.7.7"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
thiserror = "1.0"
# TODO Fix err cargo build-bpf
zeroize = "=1.3.0"

[dev-dependencies]
solana-sdk = "=1.7.7"
solana-program-test = "1.7.7"

[lib]
name = "chikin_nft_canvas"
crate-type = ["cdylib", "lib"]
